# kdrive-cli

./: .gitignore  LICENSE  README.md  gdrive_to_kdrive.py  pyproject.toml
Formula/: kdrive-cli.rb
infomaniak_cli/: __init__.py  __main__.py  api_client.py
infomaniak_cli/commands/: chat.py  core.py  drive.py
kchat_notify/: __init__.py  __main__.py  client.py
kdrive_cli/: __init__.py  __main__.py  auth.py  client.py  commands.py  config.py  migration_log.py
kdrive_cli/providers/: __init__.py  aws_secrets_manager.py  azure_keyvault.py  base.py  env.py  gcp_secret_manager.py  keyring_provider.py
